2008-10-30  kitone  <kitone@gna.org>

	* src/formats/AdvancedSubStationAlpha.h:
	* src/formats/SubStationAlpha.h:
	Fix: ASS/SSA newline (patch by Robert Ramiega)

2008-10-29  kitone  <kitone@gna.org>

	* src/formats/AdvancedSubStationAlpha.h:
	* src/formats/SubStationAlpha.h:
	Add a default style if the document doesn't 
	at least one when the file is saved.

2008-10-28  kitone  <kitone@gna.org>

	* src/formats/MicroDVD.h:
	Fix: MicrDVD to SE tags conversion.

2008-10-27  kitone  <kitone@gna.org>

	* TODO:
	Update.

2008-10-27  kitone  <kitone@gna.org>

	* configure.in:
	* src/Makefile.am:
	Remove pcre dependance.

	* src/actions/FindAndReplace.cc:
	Using GRegex instead of pcre.

2008-10-27  kitone  <kitone@gna.org>

	* TODO:
	Update.

2008-10-27  kitone  <kitone@gna.org>

	* configure.in:
	Remove pcrecpp dependance.

	* src/Makefile.am:
	Remove RegEx* and testRegEx.cc files.
	
	* src/RegEx.cc:
	* src/RegEx.h:
	* src/unittest/testRegEx.cc:
	Remove files.

2008-10-27  kitone  <kitone@gna.org>

	* src/actions/FindAndReplace.cc:
	Remove RegEx. (hack)

2008-10-26  kitone  <kitone@gna.org>

	* src/main.cc:
	Remove unused header RegEx.h.

2008-10-24  kitone  <kitone@gna.org>

	* src/actions/CombineSubtitles.cc:
	Remove unused header RegEx.h.

	* src/actions/SplitSubtitle.cc:
	Using Glib::Regex instead of RegEx.

2008-10-24  kitone  <kitone@gna.org>

	* src/actions/Dialoguize.cc:
	* src/actions/Italicize.cc:
	Using Glib::Regex instead of RegEx.

2008-10-24  kitone  <kitone@gna.org>

	* src/gui/ComboBoxVideo.cc:
	Using Glib::Regex instead of RegEx.

	* src/gui/DialogFileChooser.cc:
	Remove unused header RegEx.h.

2008-10-23  kitone  <kitone@gna.org>

	* src/formats/AdobeEncoreDVD.h:
	Using Glib::Regex instead of RegEx.
	Fix: multiple line reader.

	* src/formats/AdvancedSubStationAlpha.h:
	* src/formats/MPL2.h:
	* src/formats/MPsub.h:
	* src/formats/MicroDVD.h:
	* src/formats/SubRip.h:
	* src/formats/SubStationAlpha.h:
	* src/formats/SubViewer2.h: