@@ -1,3 +1,10 @@
+2008-11-02  kitone  <kitone@gna.org>
+
+	* src/FileWriter.h:
+	* src/Subtitle.cc:
+	Fix: bug #12542 (https://gna.org/bugs/?12542)
+	Unable to build Subtitleeditor 0.25.0
+
 2008-10-30  kitone  <kitone@gna.org>
 
 	* src/formats/AdvancedSubStationAlpha.h:
